--- a/contracts/.solhintrc.json
+++ b/contracts/.solhintrc.json
@@ -1,1 +1,14 @@
-{"extends": "solhint:recommended"}
+{
+  "extends": "solhint:recommended",
+  "plugins": [],
+  "rules": {
+    "compiler-version": ["error", "^0.8.0"],
+    "func-visibility": ["warn", {"ignoreConstructors": true}],
+    "max-line-length": ["warn", 120],
+    "not-rely-on-time": "off",
+    "no-empty-blocks": "warn",
+    "no-unused-vars": "warn",
+    "quotes": ["error", "double"],
+    "reason-string": ["warn", {"maxLength": 64}]
+  }
+}
